<resources>
    <string name="app_name">ligaDaJustica</string>
    <string name="btnHeroi">Cadastrar Heroi</string>
    <string name="btnVilao">Cadastrar Vilao</string>
    <string name="lblBemVindoHeroi">Cadastro Heroi</string>
    <string name="lblNome">Nome</string>
    <string name="txtNome">Nome</string>
    <string name="lblCodNome">Codinome</string>
    <string name="txtCodNome">Codinome</string>
    <string name="lblEspecie">Especie</string>
    <string name="txtEspecie">Especie</string>
    <string name="lblVulnerabilidades">Vulnerabilidades</string>
    <string name="txtVulnerabilidades">Vulnerabilidades</string>
    <string name="lblNivelAcessso">Nivel acesso</string>
    <string name="txtNivelAcesso">Nivel acesso</string>
    <string name="lblEquipamento">Equipamento</string>
    <string name="txtEquipamento">Equipamento</string>
    <string name="btnCadastrarMembro">Cadastrar Membro</string>
    <string name="btnConsultaHeroi">Consultar Membro</string>
    <string name="lblBemVindoColsultaMembro">Consulta Membro</string>
    <string name="lblNomeConsulta">Nome</string>
    <string name="txtConsultaNome"> </string>
    <string name="lblConsultaCodNome">Codinome</string>
    <string name="txtConsultaCodNome"> </string>
    <string name="lblConsultaEspecie">Especie</string>
    <string name="txtConsultaEspecie"> </string>
    <string name="lblConsultaVulnerabilidades">Vulnerabilidades</string>
    <string name="txtConsultaVulne"> </string>
    <string name="lblConsultaNivel">Nivel acesso</string>
    <string name="txtConsultaNivel"> </string>
    <string name="lblConsultaEquipa">Equipamento</string>
    <string name="txtConsultaEquipa"> </string>
    <string name="btnVoltarMenu">Voltar para o menu</string>
    <string name="lblBemVindoVilao">Cadastro Vilao</string>
    <string name="lblNomeVilao">Nome</string>
    <string name="txtNomeVilao">Nome</string>
    <string name="lblCodNomeVilao">Codinome</string>
    <string name="txtCodNomeVilao">Codinome</string>
    <string name="lblEspecieVilao">Especie</string>
    <string name="txtEspecieVilao">Especie</string>
    <string name="lblVulneVilao">Vulnerabilidades</string>
    <string name="lblNivelAcessoVilao">Nivel acesso</string>
    <string name="txtVuneVilao">Vulnerabilidades</string>
    <string name="txtNivelVilao">Nivel acesso</string>
    <string name="btnCadastraVilao">Cadastrar Vilao</string>
    <string name="btnConsultaVilao">Consultar Vilao</string>
    <string name="lblEquipaVilao">Equipamento</string>
    <string name="txtEquipamentoVilao">Equipamento</string>
    <string name="lblHeroiRival">Herois rivais</string>
    <string name="txtHeroiRival">Herois rivais</string>
    <string name="lblDataFifgt">Data ataque</string>
    <string name="txtDataFight">Data ataque</string>
    <string name="lblEsconderijo">Esconderijo</string>
    <string name="txtEsconderijo">Esconderijo</string>
    <string name="lblBemvindovilao">Consulta Vilao</string>
    <string name="lblConsultaNome">Nome</string>
    <string name="txtConsultaNomeVilao"> </string>
    <string name="lblCodNomeConsul">Codinome</string>
    <string name="txtCodNomeConsul"> </string>
    <string name="lblEspecieConsul">Especie</string>
    <string name="txtEspecieConsulVilao"> </string>
    <string name="lblVulneConsul">Vulnerabilidades</string>
    <string name="txtVulneConsul"> </string>
    <string name="lblNivelConsul">Nivel acesso</string>
    <string name="txtNivelConsul"> </string>
    <string name="lblEquipaConsul">Equipamento</string>
    <string name="txtEquipaConsul"> </string>
    <string name="lblHeroiRivalConsul">Heroi Rival</string>
    <string name="txtHeroiRivalConsul"> </string>
    <string name="lblDataAtaqueConsul">Data Ataque</string>
    <string name="txtDataAtaqueConsul"> </string>
    <string name="lblEsconderijoConsul">Esconderijo</string>
    <string name="txtEsconderijoConsul"> </string>
    <string name="btnVoltarMenuPrince">Voltar para o menu</string>
    <string name="btnEquipamento">Cadastrar Equipamento</string>
    <string name="lblBemVindoEquipa">Cadastro Equipamento</string>
    <string name="lblNomeEquipa">Nome</string>
    <string name="txtNomeEquipa">Nome</string>
    <string name="lblDescricaoEquipa">Descricao</string>
    <string name="txtDescricaoEquipa">Equipamento</string>
    <string name="lblFinalidade">Finalidade</string>
    <string name="txtFinalidadeEquipa">Finalidade</string>
    <string name="btnCadastrarEquipamento">Cadastrar Equipamento</string>
    <string name="btnConsultarEqauipa">Consultar Equipamento</string>
    <string name="lblBemVindoConsultaEq">Consulta Equipamento</string>
    <string name="lblConsulNomeEq">Nome</string>
    <string name="txtConsulNomeEq"> </string>
    <string name="lblConsulDescricaoEq">Descricao</string>
    <string name="txtConsulDescricaoEq"> </string>
    <string name="lblConsulFinaEq">Finalidade</string>
    <string name="txtConsulFinEq"> </string>
    <string name="btnVoltarMenuEq">Voltar para o menu </string>
    <string name="lblTeste1"> </string>
    <string name="lblTeste2"> </string>
    <string name="lblTeste3"> </string>
    <string name="lblDescConsulEq"> Descricao Equipamento</string>
    <string name="txtConsulDescEq"> </string>
    <string name="lblFinaConsuEq"> Finalidade Equipamento </string>
    <string name="txtFinaConsulEq"> </string>
    <string name="lblDescricaoConsulMem"> Descricao Equipamento</string>
    <string name="txtDescricaoConsulMem"> </string>
    <string name="lblFinaConsulMem"> Finalidade Equipamento</string>
    <string name="txtFinaConsulMem"></string>
</resources>