<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".consultaHeroi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblFinaConsulMem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/lblFinaConsulMem"
                app:layout_constraintEnd_toEndOf="@+id/lblDescricaoConsulMem"
                app:layout_constraintStart_toStartOf="@+id/lblDescricaoConsulMem"
                app:layout_constraintTop_toBottomOf="@+id/lblDescricaoConsulMem" />

            <TextView
                android:id="@+id/txtFinaConsulMem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtFinaConsulMem"
                app:layout_constraintEnd_toEndOf="@+id/txtDescricaoConsulMem"
                app:layout_constraintStart_toStartOf="@+id/txtDescricaoConsulMem"
                app:layout_constraintTop_toBottomOf="@+id/txtDescricaoConsulMem" />

            <TextView
                android:id="@+id/txtDescricaoConsulMem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtDescricaoConsulMem"
                app:layout_constraintEnd_toEndOf="@+id/txtConsultaEquipa"
                app:layout_constraintStart_toStartOf="@+id/txtConsultaEquipa"
                app:layout_constraintTop_toBottomOf="@+id/txtConsultaEquipa" />

            <TextView
                android:id="@+id/lblDescricaoConsulMem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/lblDescricaoConsulMem"
                app:layout_constraintEnd_toEndOf="@+id/lblConsultaEquipa"
                app:layout_constraintStart_toStartOf="@+id/lblConsultaEquipa"
                app:layout_constraintTop_toBottomOf="@+id/lblConsultaEquipa" />

            <Button
                android:id="@+id/btnVoltarMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:onClick="VoltarMenu"
                android:text="@string/btnVoltarMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblFinaConsulMem" />

            <TextView
                android:id="@+id/lblConsultaEquipa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/lblConsultaEquipa"
                app:layout_constraintEnd_toEndOf="@+id/lblConsultaNivel"
                app:layout_constraintStart_toStartOf="@+id/lblConsultaNivel"
                app:layout_constraintTop_toBottomOf="@+id/lblConsultaNivel" />

            <TextView
                android:id="@+id/txtConsultaNivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtConsultaNivel"
                app:layout_constraintEnd_toEndOf="@+id/txtConsultaVulne"
                app:layout_constraintStart_toStartOf="@+id/txtConsultaVulne"
                app:layout_constraintTop_toBottomOf="@+id/txtConsultaVulne" />

            <TextView
                android:id="@+id/lblConsultaNivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/lblConsultaNivel"
                app:layout_constraintEnd_toEndOf="@+id/lblConsultaVulnerabilidades"
                app:layout_constraintStart_toStartOf="@+id/lblConsultaVulnerabilidades"
                app:layout_constraintTop_toBottomOf="@+id/lblConsultaVulnerabilidades" />

            <TextView
                android:id="@+id/txtConsultaVulne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtConsultaVulne"
                app:layout_constraintEnd_toEndOf="@+id/txtConsultaEspecie"
                app:layout_constraintStart_toStartOf="@+id/txtConsultaEspecie"
                app:layout_constraintTop_toBottomOf="@+id/txtConsultaEspecie" />

            <TextView
                android:id="@+id/lblConsultaVulnerabilidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/lblConsultaVulnerabilidades"
                app:layout_constraintEnd_toEndOf="@+id/lblConsultaEspecie"
                app:layout_constraintStart_toStartOf="@+id/lblConsultaEspecie"
                app:layout_constraintTop_toBottomOf="@+id/lblConsultaEspecie" />

            <TextView
                android:id="@+id/txtConsultaEspecie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtConsultaEspecie"
                app:layout_constraintEnd_toEndOf="@+id/txtConsultaCodNome"
                app:layout_constraintStart_toStartOf="@+id/txtConsultaCodNome"
                app:layout_constraintTop_toBottomOf="@+id/txtConsultaCodNome" />

            <TextView
                android:id="@+id/lblConsultaEspecie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/lblConsultaEspecie"
                app:layout_constraintEnd_toEndOf="@+id/lblConsultaCodNome"
                app:layout_constraintStart_toStartOf="@+id/lblConsultaCodNome"
                app:layout_constraintTop_toBottomOf="@+id/lblConsultaCodNome" />

            <TextView
                android:id="@+id/txtConsultaCodNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtConsultaCodNome"
                app:layout_constraintEnd_toEndOf="@+id/txtConsultaNomeVilao"
                app:layout_constraintStart_toStartOf="@+id/txtConsultaNomeVilao"
                app:layout_constraintTop_toBottomOf="@+id/txtConsultaNomeVilao" />

            <TextView
                android:id="@+id/txtConsultaNomeVilao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtConsultaNome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.705"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblBemVindoColsultaMembro" />

            <TextView
                android:id="@+id/lblBemVindoColsultaMembro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/lblBemVindoColsultaMembro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblConsultaCodNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/lblConsultaCodNome"
                app:layout_constraintEnd_toEndOf="@+id/lblNomeConsulta"
                app:layout_constraintStart_toStartOf="@+id/lblNomeConsulta"
                app:layout_constraintTop_toBottomOf="@+id/lblNomeConsulta" />

            <TextView
                android:id="@+id/lblNomeConsulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/lblNomeConsulta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.152"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblBemVindoColsultaMembro" />

            <TextView
                android:id="@+id/txtConsultaEquipa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txtConsultaEquipa"
                app:layout_constraintEnd_toEndOf="@+id/txtConsultaNivel"
                app:layout_constraintStart_toStartOf="@+id/txtConsultaNivel"
                app:layout_constraintTop_toBottomOf="@+id/txtConsultaNivel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>